--- a/create.html
+++ b/create.html
@@ -27,7 +27,7 @@
   </header>
   <section class="create-section">
     <div class="create-content">
-      <h1>Upload and Play Unity WebGL File</h1>
+      <h1>Upload Unity WebGL File</h1>
       <input type="file" id="unityFile" accept=".html,.unity3d" required>
       <button onclick="uploadFile()">Upload and Play</button>
       <div id="unityContainer"></div>
